// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component Checkbox Can be a checkbox 1`] = `
<input
  aria-describedby=""
  checked="true"
  className="check1"
  id="check1"
  onClick={[Function]}
  required={false}
  type="checkbox"
/>
`;

exports[`Input component Input component props Passes its props 1`] = `
<input
  aria-describedby=""
  className="foo"
  id="bags"
  onChange={[Function]}
  required={false}
  type="text"
  value={undefined}
/>
`;

exports[`Input component Input component props passes the value 1`] = `
<input
  aria-describedby=""
  className="foo"
  id="bags"
  onChange={[Function]}
  required={false}
  type="text"
  value="Sivans"
/>
`;
